cmake_minimum_required(VERSION 2.8)
project(zook_client)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -pg -g")
include_directories()
link_directories(/usr/local/lib) 
link_libraries(zookeeper_mt pthread)
aux_source_directory(./ SRC_LIST)
#file(GLOB_RECURSE SRC_LIST ./*.cpp)
add_executable(bin/zook_client ${SRC_LIST})
